# Proyecto-Regression---Grupo-3

./: .gitattributes  .gitignore  Airbnb_models_project_v3.ipynb  Airnbnb_models_project_ipynb_.ipynb  README.md  Untitled0.ipynb  database.py  main.py  notebook.ipynb  predict__price.py  predict_price.py  pruebas_modelos.py  pyproject.toml  regressor_project.py  requirements.txt  rf_pipeline.py
artifacts/: feature_columns.pkl
backend/: main.py
backend/models/: model_metadata.json
checkpoints/: checkpoint_manager.py
data/: preprocessor.py
frontend/src/: App.css  App.js  PredictForm.css  PredictForm.jsx
models/: predict__price.py  scaler.pkl
notebook/: EDA.ipynb  EDA_airbnb_DB.ipynb  EDA_airbnb_clean.ipynb  EDA_combineDf.ipynb
notebooks/: EDA_airbnb_clean.ipynb  EDA_combineDf.ipynb  inside_airbnb_eda.ipynb  inside_airbnb_eda_2.ipynb  inside_airbnb_eda_2_backup copy.ipynb  inside_airbnb_eda_2_backup.ipynb  inside_airbnb_eda_3.ipynb  inside_airbnb_eda_3_backup.ipynb  inside_airbnb_eda_3_last.ipynb  inside_airbnb_model.ipynb  kaggle_airbnb_eda.ipynb  random_forest_v5_guide copy.ipynb  random_forest_v5_guide.ipynb  test_inside_airbnb_eda.ipynb
pkl/: modelo_xgboost_combinado.pkl
src/: inside_airbnb_eda_2.py  inside_airbnb_eda_3.py  inside_airbnb_model.py  py_to_ipynb.py  random_forest_v5_train.py
src/models/: random_forest_v5_train.py
src/scripts/: inside_airbnb_eda_3_last_edited.ipynb  inside_airbnb_eda_3_last_edited.py  (+2 more)
test/: random_forest_v5_random_test.py  random_forest_v5_terminal_test.py
tests/: prueba_modelo_XGBoost.py
(+2 files in other folders)
