[project]
name = "ai-decission-tress-for-regression"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
